# elijah-bringup

./: .gitignore  DEPLOYMENT_CHECKLIST.md  EMERGENCY_PROCEDURES.md  Makefile  OPERATIONS_GUIDE.md  README.md  ansible.cfg  elijahctl.py  lfg.md  pyproject.toml  requirements.txt  setup-updated.md  setup.md  setup.py  technical-outline.md
.claude/: settings.local.json
elijahctl/: __init__.py  checklist.py  cli.py  config.py
elijahctl/diagnostics/: __init__.py  microhard_diag.py
elijahctl/drivers/: jetson.py  mavlink.py  mh_profile.py  microhard.py  remoteid.py  unifi.py
elijahctl/health/: checks.py
elijahctl/testing/: __init__.py  microhard_testing.py
elijahctl/tests/integration/: test_integration.py  test_remoteid_integration.py
elijahctl/tests/unit/: test_health.py  test_mavlink.py  test_microhard.py  test_remoteid.py
elijahctl/utils/: logging.py  network.py
sim/: docker-compose.yml
sim/services/jetson_sim/: Dockerfile  main.py  state.json
sim/services/leases/: leases.json
sim/services/mavlink_sim/: Dockerfile  mavlink_sim.py
sim/services/microhard_sim/: Dockerfile  main.py  state_air.json  state_ground.json
sim/services/udp_emitters/: Dockerfile  emitters.py
sim/services/unifi_sim/: Dockerfile  main.py
sim/tools/: simctl.py
